# api/v1/swagger.yml
@@ -362,7 +362,6 @@ paths:
                 autoWeeks:
                   type: integer
                   description: "Updated auto backup frequency in weeks."
-                # ... include other fields that can be updated ...
       responses:
         200:
           description: "The updated device information"
@@ -392,7 +391,6 @@ paths:
                   autoWeeks:
                     type: integer
                     description: "Updated auto backup frequency in weeks."
-                  # ... other properties of the updated device ...
         500:
           description: "Error message in case of server error."
     delete:
@@ -514,3 +512,271 @@ paths:
                   error:
                     type: string
                     description: Error message
+  /user/update-settings/{userId}:
+    put:
+      tags:
+        - "users"
+      summary: "Updates user settings"
+      description: "Updates the settings for a specific user."
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+          description: "The unique identifier of the user whose settings are to be updated."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                # Include properties that can be updated
+      responses:
+        200:
+          description: "User settings updated successfully"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Success message"
+        401:
+          description: "Unauthorized"
+        500:
+          description: "Server error"
+  /user/change-password:
+    put:
+      tags:
+        - "users"
+      summary: "Changes the password for a user"
+      description: "Allows a user to change their password."
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                currentPassword:
+                  type: string
+                  format: password
+                  description: "The current password of the user."
+                newPassword:
+                  type: string
+                  format: password
+                  description: "The new password for the user."
+      responses:
+        200:
+          description: "Password changed successfully"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Success message"
+        401:
+          description: "Unauthorized"
+        500:
+          description: "Server error"
+  /user/{userId}:
+    delete:
+      tags:
+        - "users"
+      summary: "Deletes a user by their ID"
+      description: "Removes a user from the system using their unique identifier."
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+          description: "The unique identifier of the user to be deleted."
+      responses:
+        200:
+          description: "User deleted successfully"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Success message"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "User not found"
+        500:
+          description: "Server error"
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - "users"
+      summary: "Retrieve information about a specific user"
+      description: "Retrieves information about a specific user by their ID."
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+          description: "Unique identifier of the user."
+      responses:
+        200:
+          description: "Detailed information of the specified user"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  userId:
+                    type: integer
+                    description: "The unique identifier of the user."
+                  email:
+                    type: string
+                    description: "Email of the user."
+                  userLevel:
+                    type: string
+                    description: "User level of the account."
+                  # Add other properties of the user as needed
+        500:
+          description: "Error message in case of server error."
+  /users:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - "users"
+      summary: "Retrieve a list of all users"
+      description: "Retrieves a list of all users."
+      responses:
+        200:
+          description: "A list of users"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    userId:
+                      type: integer
+                      description: "The unique identifier of the user."
+                    email:
+                      type: string
+                      description: "Email of the user."
+                    userLevel:
+                      type: string
+                      description: "User level of the account."
+                    # Add other properties of the user as needed
+        500:
+          description: "Error message in case of server error."
+  /user/reset-password-request:
+    post:
+      tags:
+        - "users"
+      summary: "Initiate a password reset request"
+      description: "Initiates a password reset request."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: "Email address of the user requesting a password reset."
+      responses:
+        200:
+          description: "Password reset request initiated"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Confirmation message indicating that the password reset request was initiated."
+        400:
+          description: "Invalid request parameters"
+        500:
+          description: "Error message in case of server error."
+  /user/reset-password:
+    post:
+      tags:
+        - "users"
+      summary: "Reset the password for a user"
+      description: "Resets the password for a user."
+      parameters:
+        - in: query
+          name: token
+          required: true
+          schema:
+            type: string
+          description: "Password reset token."
+        - in: query
+          name: newPassword
+          required: true
+          schema:
+            type: string
+          description: "New password for the user."
+      responses:
+        200:
+          description: "Password reset successfully"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Confirmation message indicating that the password has been reset."
+        400:
+          description: "Invalid request parameters or token"
+        500:
+          description: "Error message in case of server error."
+  /user/unlock/{userId}:
+    put:
+      security:
+        - bearerAuth: []
+      tags:
+        - "users"
+      summary: "Unlock a user account"
+      description: "Unlocks a user account."
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+          description: "Unique identifier of the user to unlock."
+      responses:
+        200:
+          description: "User account unlocked successfully"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Confirmation message indicating that the user account has been unlocked."
+        404:
+          description: "User not found"
+        500:
+          description: "Error message in case of server error."
+
